plantLover section responsive dome

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="plantLover-container">
           <div class="plantLover-image">
             <div class="image">
-              <img src="assets/flower-store.png" alt="" />
+              <img src="assets/flower-store.png" alt="store image" />
             </div>
             <div class="badge">
               <img src="assets/trusted-badge.png" alt="badge" />
