latest Deals section responsive done

--- a/index.html
+++ b/index.html
@@ -149,6 +149,34 @@
           </div>
         </div>
       </section>
+
+      <!-- latest Deal section start -->
+      <section class="latest-deal-section">
+        <div class="latest-deals-container">
+          <div class="deal-content text-center">
+            <h2 class="section-title"><span>Latest</span> Deals</h2>
+            <p class="deal-description">
+              Indulge your senses with the beauty fragense of our fresh flowers
+              shop. From classic rose to exotic blooms, we offer a wide variety
+              of fresh.
+            </p>
+          </div>
+          <div class="deals-container">
+            <div class="sixtyParsent text-center">
+              <h3>60% Off | Bloom Plant</h3>
+              <a href="#">Shop Now</a>
+            </div>
+            <div class="zabo-plant text-center">
+              <h3>25% Off | Zabo Plant</h3>
+              <a href="#">Shop Now</a>
+            </div>
+            <div class="thirtyParsent text-center">
+              <h3>30% Off | Ana Plant</h3>
+              <a href="#">Shop Now</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
