join and footer section responsive done

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </ul>
         </nav>
       </div>
-
+      <!-- banner section start -->
       <div class="banner-container">
         <div class="banner-content">
           <h1 class="banner-title">Always <span>fresh flowers</span></h1>
@@ -45,6 +45,7 @@
       </div>
     </header>
     <main>
+      <!-- plant section start -->
       <section class="plant-section">
         <div class="plant-container">
           <div class="plant-content text-center">
@@ -123,7 +124,11 @@
               <img src="assets/flower-store.png" alt="store image" />
             </div>
             <div class="badge">
-              <img src="assets/trusted-badge.png" alt="badge" />
+              <img
+                class="badgeRotate"
+                src="assets/trusted-badge.png"
+                alt="badge"
+              />
             </div>
           </div>
 
@@ -162,21 +167,83 @@
             </p>
           </div>
           <div class="deals-container">
-            <div class="sixtyParsent text-center">
+            <div class="sixtyParsent text-center text-white">
               <h3>60% Off | Bloom Plant</h3>
               <a href="#">Shop Now</a>
             </div>
-            <div class="zabo-plant text-center">
+            <div class="zabo-plant text-center text-white">
               <h3>25% Off | Zabo Plant</h3>
               <a href="#">Shop Now</a>
             </div>
-            <div class="thirtyParsent text-center">
+            <div class="thirtyParsent text-center text-white">
               <h3>30% Off | Ana Plant</h3>
               <a href="#">Shop Now</a>
             </div>
           </div>
         </div>
       </section>
+
+      <!-- join section start -->
+      <section class="join-section">
+        <div class="join-section-container">
+          <div class="section-title text-white">
+            <h2>Join the colorful Bunch</h2>
+          </div>
+          <form class="input-field" action="#">
+            <input
+              type="email"
+              name="email"
+              id="emai"
+              placeholder="Write Email"
+            />
+            <a href="#" class="btn-subcribe text-white">Subscribe</a>
+          </form>
+        </div>
+      </section>
     </main>
+    <footer class="footer-section">
+      <div class="footer-container">
+        <div class="footer-logo">
+          <img src="assets/logo.png" alt="logo image" />
+          <p class="description">
+            Indulge your senses with the beauty fragense of our fresh flowers
+            shop. From classic rose to exotic blooms, we offer a wide variety of
+            fresh.
+          </p>
+        </div>
+        <div class="home">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Blogs</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="feature">
+          <ul>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Terms & Conditions</a></li>
+            <li><a href="#">Help Center</a></li>
+          </ul>
+        </div>
+        <div class="nav-link">
+          <a href="#"
+            ><img src="assets/icon-linkedin.png" alt="linkdin logo"
+          /></a>
+          <a href="#"
+            ><img src="assets/icon-twitter.png" alt="twitter logo"
+          /></a>
+          <a href="#"
+            ><img src="assets/icon-facebook.png" alt="facebook logo"
+          /></a>
+          <a href="#"
+            ><img src="assets/icon-youtube.png" alt="youtube logo"
+          /></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
