show alert function

--- a/index.html
+++ b/index.html
@@ -61,56 +61,56 @@
               <img src="assets/sample-flower-image.png" alt="flowers image" />
               <h3>Rose</h3>
               <h4>20 USD</h4>
-              <button id="addedCard" class="btn">Add to Card</button>
+              <button onclick="showAlert()" class="btn">Add to Card</button>
             </div>
 
             <div class="plant-item text-center">
               <img src="assets/sample-flower-image.png" alt="flowers image" />
               <h3>Laly Blossom</h3>
               <h4>43 USD</h4>
-              <button id="addedCard" class="btn">Add to Card</button>
+              <button onclick="showAlert()" class="btn">Add to Card</button>
             </div>
 
             <div class="plant-item text-center">
               <img src="assets/sample-flower-image.png" alt="flowers image" />
               <h3>Arabian Jasmine</h3>
               <h4>34 USD</h4>
-              <button id="addedCard" class="btn">Add to Card</button>
+              <button onclick="showAlert()" class="btn">Add to Card</button>
             </div>
 
             <div class="plant-item text-center">
               <img src="assets/sample-flower-image.png" alt="flowers image" />
               <h3>Water Lily</h3>
               <h4>77 USD</h4>
-              <button id="addedCard" class="btn">Add to Card</button>
+              <button onclick="showAlert()" class="btn">Add to Card</button>
             </div>
 
             <div class="plant-item text-center">
               <img src="assets/sample-flower-image.png" alt="flowers image" />
               <h3>Crape Jasmine</h3>
               <h4>60 USD</h4>
-              <button id="addedCard" class="btn">Add to Card</button>
+              <button onclick="showAlert()" class="btn">Add to Card</button>
             </div>
 
             <div class="plant-item text-center">
               <img src="assets/sample-flower-image.png" alt="flowers image" />
               <h3>Kadamba</h3>
               <h4>28 USD</h4>
-              <button id="addedCard" class="btn">Add to Card</button>
+              <button onclick="showAlert()" class="btn">Add to Card</button>
             </div>
 
             <div class="plant-item text-center">
               <img src="assets/sample-flower-image.png" alt="flowers image" />
               <h3>Hibiscus</h3>
               <h4>50 USD</h4>
-              <button id="addedCard" class="btn">Add to Card</button>
+              <button onclick="showAlert()" class="btn">Add to Card</button>
             </div>
 
             <div class="plant-item text-center">
               <img src="assets/sample-flower-image.png" alt="flowers image" />
               <h3>Tuberose</h3>
               <h4>98 USD</h4>
-              <button id="addedCard" class="btn">Add to Card</button>
+              <button onclick="showAlert()" class="btn">Add to Card</button>
             </div>
           </div>
         </div>
@@ -245,5 +245,11 @@
         </div>
       </div>
     </footer>
+
+    <script>
+      function showAlert() {
+        alert("added successful. Go to Cart");
+      }
+    </script>
   </body>
 </html>
