latest deals section style modified

--- a/index.html
+++ b/index.html
@@ -168,14 +168,17 @@
           </div>
           <div class="deals-container">
             <div class="sixtyParsent text-center text-white">
+              <div class="overlay"></div>
               <h3>60% Off | Bloom Plant</h3>
               <a href="#">Shop Now</a>
             </div>
             <div class="zabo-plant text-center text-white">
+              <div class="overlay"></div>
               <h3>25% Off | Zabo Plant</h3>
               <a href="#">Shop Now</a>
             </div>
             <div class="thirtyParsent text-center text-white">
+              <div class="overlay"></div>
               <h3>30% Off | Ana Plant</h3>
               <a href="#">Shop Now</a>
             </div>
@@ -207,8 +210,7 @@
           <img src="assets/logo.png" alt="logo image" />
           <p class="description">
             Indulge your senses with the beauty fragense of our fresh flowers
-            shop. From classic rose to exotic blooms, we offer a wide variety of
-            fresh.
+            shop.
           </p>
         </div>
         <div class="home">
